<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColor">

    <TextView
        android:id="@+id/gameEndedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/highScoreContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/gameEndedTitle"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/highScoreTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/highScoreText"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/score_label"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/highScoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/DarkGreen"
            android:textSize="70sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gameTimeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/highScoreContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <TextView
            android:id="@+id/gameTimeTextLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/game_time_label"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/gameTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/RosyBrown"
            android:textSize="40sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@+id/homeButton"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:text="@string/play"
        android:textSize="28sp" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_above="@+id/shareButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/high_scores"
        android:textSize="28sp" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="@string/share"
        android:textSize="28sp" />

</RelativeLayout>